# plonky2-circom

./: Cargo.toml  e2e_test_recursive_proof_circom_verification.sh  g.sh  rust-toolchain.toml
benches/: hashing.rs
circom/circuits/: gates.circom
circom/e2e_tests/: run.sh  run2.sh  witness_generation_test.sh
circom/test/data/: proof.json
src/: verifier.rs
